# ChangeLog for app-arch/freeze
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/freeze/ChangeLog,v 1.23 2013/01/03 10:55:42 ago Exp $

  03 Jan 2013; Agostino Sarubbo <ago@gentoo.org> freeze-2.5.0-r1.ebuild:
  Stable for amd64, wrt bug #449920

  12 Dec 2012; Jeroen Roovers <jer@gentoo.org> freeze-2.5.0-r1.ebuild,
  +files/freeze-2.5.0-gentoo.patch:
  Fix symlinks in /usr/bin and mandir.

*freeze-2.5.0-r1 (12 Dec 2012)

  12 Dec 2012; Jeroen Roovers <jer@gentoo.org> freeze-2.5.0.ebuild,
  +freeze-2.5.0-r1.ebuild:
  Adjust sleuthkit blocker to a specific minimal version. Revision bump for an
  ebuild that removes the fcat and fcat.1 symlinks (bug #444872).

  09 Dec 2012; Jeroen Roovers <jer@gentoo.org> freeze-2.5.0.ebuild:
  Block app-forensics/sleuthkit (bug #444872 by Marc Schiffbauer).

  22 Nov 2012; Ulrich Müller <ulm@gentoo.org> freeze-2.5.0.ebuild:
  Fix LICENSE, bug 444342.

  05 Jul 2009; Ben de Groot <yngwin@gentoo.org> freeze-2.5.0.ebuild:
  Block media-libs/mlt[melt] (bug 274671). Eapi-2-ify.

  13 May 2008; Jeroen Roovers <jer@gentoo.org> freeze-2.5.0.ebuild:
  Stable for HPPA (LuckyLuke). Fixed quoting issue.

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  04 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  freeze-2.5.0.ebuild:
  Stop Makefile stripping files, thanks to Jakub for the patch, bug 152224

  13 Nov 2005; Jason Wever <weeve@gentoo.org> freeze-2.5.0.ebuild:
  Stable on SPARC.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org> freeze-2.5.0.ebuild:
  Mark 2.5.0 stable on alpha

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  18 Dec 2004; Simon Stelling <blubb@gentoo.org> freeze-2.5.0.ebuild:
  was testing for a long time, marking stable on amd64
