@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX freeze-2.5.0-gentoo.patch 1541 SHA256 7d2cad942baf77912799542db417a637bfb57fec89bf01e12d4731b4169c5c41 SHA512 be93f27959405bb7ca0f7407e32e93d9b1bf5f202ad6100e7a8aa18fb8b978402fe5293714a116c6eb7599c84c2186eaf518025c1dd8cc8f6184d346ca54eeac WHIRLPOOL 5d91adb1c5ea4f87be0b34a4fd38da792b15f084761cbda46c3c7d82d1ada442bcd2347d99f48ffbb100058aba70efb6485e93ef22aa676598b29d7e87a9961c
 DIST freeze-2.5.0.tar.gz 36010 SHA256 f543eb18bd7de8893a3c0bac0e4fa5fea46a4e10f5d8182cebc40c97b8593863 SHA512 2e0965e1bb772a829763b99c623b3dfa062a624ed2bd5f658c9df0e4040a9c914aec5a85602340fe994634b82d2fac3250030b35ad3d5f5054b0a6f4059469e7 WHIRLPOOL 8415350c9ad833ceebff515922df947a54c1400cbba9606ef283068d6453cded3a6b674c4940fe0260a085834dd7b5b0a5cf3cb0116bbfde9cdd59d26323f0f2
-EBUILD freeze-2.5.0-r1.ebuild 1045 SHA256 7c691d0690d2ee27fdee361696f4f79d48a7a769dd9f6f3a5ddca82fece334cc SHA512 d72c7f979bd8d07e04c63963768039c7efbe5cc4b6831c1cd84e6a852082b8b9542845f0ff33142db90fddb031c237d4c0d90ee930037fa54cbdddbd8ba1bff9 WHIRLPOOL 6e4e9d94fb1dfbba92b55313b22b4e279ec5ea8608c0ee30404410e8fd19d8ea133c6f57a73df0d2c2e3c9e6eae9110f00ab3eb4647dad311c1207a57a70bed1
+EBUILD freeze-2.5.0-r1.ebuild 1044 SHA256 981301edc352bf487e2ae661f663511df511423b256a52736f7269b6137c5ce3 SHA512 4e5fd91e1bb7b445e4247be3d14c174467d69ae5035f10c874133fb1eefafd26ff5bc60659ae64314975555a50879890532f4ffa8500bd3704479b51b6199c9d WHIRLPOOL cb1cd6c5ffc984ab526d3b25196e309caae403035b1d7cf1796c4059fc967c0423fb56b5b97a77a398d1f56fd72f9d38cce1c9a62014956f85c1b37d07459936
 EBUILD freeze-2.5.0.ebuild 1200 SHA256 efb943b9590293d38c125aadd7864b5c938fa70ee5285ca0858b2cf432b63b11 SHA512 3d564e1a1cec715190595d9ed6d1372d64619ccc180a83ed90c2801e9de280447470800eb2845db05c347b4259a672a02c2d9504c872c788933eef923deafec3 WHIRLPOOL 2b1516041058b7b361eb89b0c2a92c3a2548c5251ff80bd8db952b11444dac950e3bd5d27549d2983c9154beff0fe7dc96d33ef01ba843b3b011361fe7391b10
-MISC ChangeLog 2740 SHA256 778b7a663626d571bdfd82f17a948bda5f63ee9d9e8f89d4bb3189659ec46c78 SHA512 429d4dc569fbc335a5d52ef976c26dac759ae2249161d2e084356b2cb830c0497965a97d827e2b6115a875160d91c13ec24d89ae392ba31d44428037e5d9403c WHIRLPOOL d68ffc86f7c08759c9fc6f5c05e8cfd1a059eba5261cefcbd5f262556cd6332522dfba684fa5a61a0455b6c499927cb993cb1a6e8f08f861a1e96f40d7371635
+MISC ChangeLog 2845 SHA256 ddf04b3c86db2712de29869cf0270ffc08281d804a4c38f2bbafb01c766105c6 SHA512 d74f806785f3c84c2db9f74fa1d8ed53e225e9f0feeea22a00c056cb10c36bdc4653a6bdb3d5c7bc3c068bd967c51e2f9817507900746038e98bee4f62e98a44 WHIRLPOOL 87bc0075d8b315906490f8259e34bc9e1bfff9b3a35067011796ff6943cb1cb4a9c00fe82837d00ef7924dd989109560b572ca97c9dba8693d1b7c1c38fd78c3
 MISC metadata.xml 268 SHA256 2089ca59285b2836a6ec1d5aef27f83d580e922212301f0b1eadb04400eb45eb SHA512 8e365ead118785104bc7576a48a106346ef24f5b709349f8ca3d5fb9107a248d0f172e6898fb4ba4b2b7f84e6c8c7960578a2919e1a3692664cb808b16e6b2b2 WHIRLPOOL 255e754b42ff038b07a48321ced9fe6f8acdc99bb85873807b3e902517a1764dabc7152e5ca9ad4d83ab5dc9d3a611f79e6c066121be77aed3cad1b0f3587b73
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDleE0ACgkQVWmRsqeSphNvbgCeMHbpsbHp1RE229gxM9RawNqB
+9N0AmwS9UjSvQkUXPxoSLI1NHoGY5x94
+=1cvB
+-----END PGP SIGNATURE-----
