@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX sleuthkit-3.2.3-system-sqlite.patch 623 SHA256 c896f9e9cfb931710e5b27758acdde5d592caf8c9cb472815d4ba6741526bd1d SHA512 92fc5bf7e31c4671013ced63b0b348bf1b6126969d54c87484ea9e489f9a5322551b3f37b2dadc9aac8b48f16e299c3208fae620f9977f5ebad1378bf97e97cb WHIRLPOOL df490a2399d9caa5035e85f27112a9faf8d198093955a1ff458a9a1fbc244be93fd90a9243e4c3d3e45756825e5f0588728e8dbba79083b064ae6cd8aaba0efc
 AUX sleuthkit-3.2.3-tools-shared-libs.patch 1685 SHA256 1126fa5b95cfa090426576b5e04a3b1a3814b63f0196f5216157929133ba6ec6 SHA512 675dcfe2eac295c06f1989b82f4fd5bfb2815405892dc2c6013001bd52dfb56fcd8d78eec84ad52a6103fa059ca1f3ca09ed7b6c65004222c4393d645b886d5b WHIRLPOOL 64711182f7eb8cd26e1afd1027c5a4f3da4716ae9f0ed5e3715286b3e0c1cdba2947d7c79e0114510054393c17ad42b14748d591155accf949b5b0515afdb0d3
 AUX sleuthkit-4.0.0-system-sqlite.patch 940 SHA256 1280cfb5b5be8d6896b4fc3f335cbc8b66dd00cf3a52734144918627da0e8f53 SHA512 c73324bc73fa90b657deb634825c846c751913ff39f1613975b633eb6255b207fac3307ee575e0e683d4664b6809f792b8a7d6ef1cb9846f03c2338edc70f0f9 WHIRLPOOL 2c50cb063489117eb9d72b916dcbfcd91abcd18dffc9880b17a871c9672f1f19d7ed5a70bed1d946532a5af0d44c3b1c889b262dc546d49e97eac66549067d86
@@ -6,6 +9,13 @@ DIST sleuthkit-4.0.0.tar.gz 7454421 SHA256 bee3c95997cf77670758947dbd49743a43bef
 DIST sleuthkit-4.0.1.tar.gz 7488397 SHA256 719d9a702f74c30302840301fe573c5bb5af5b88471b48657114eba6b0d76f12 SHA512 34de46671c575a61e169af524a8c92701731b58a3f9717a22639b99cab6fd5ac84fe912e699169b5a8bb546816d464370d0e3fa55e714898dd4ca94c7fa907fe WHIRLPOOL df41455499a4a29ffd1efa61925b7d491d1e253c2761e1d8026df41d6620719269954f7fd851a30744ed90816e1ec9e7ccec6dc8d46990e9b20177fb1b6116a1
 EBUILD sleuthkit-3.2.3.ebuild 1058 SHA256 c7235da09a219624111b5069cba6320c0ed36edc5e47eea8d1c3f0c9c48c04a5 SHA512 a82814c73b3ee3dc01d636aed5a91422e7fec81df4e4d454feb718d7d09b7024bfd76a3517073b9a26b3b71c432f2a2ad4d11cc3cbb525f69f8214c5a03bd08c WHIRLPOOL b1de0393c89bd4d74e8d3567fbc74fc32f9aec4c6d3059135e2be423778fff9329d88f258f659f83f2687d17f20d990a56a92c04f92f59009f743265a55067d9
 EBUILD sleuthkit-4.0.0.ebuild 998 SHA256 876c75a70da7831669864b0a544e1d162ed4c746476d1e2d8fa836d1d06b4dc8 SHA512 7147052ed99b3f5ea7a372051f7d565d66ba02594112429ae3298aa1b4cc98db312efb6990c5b89007bd39ae6c2d6194a01c27a2f03be465bfa7d04e802a37db WHIRLPOOL e289d54e6c7ef8e4f1ae01a3f66c022f82a862e457b98eeb6108090004ba2b9fa1d62ed8810de3de2520642e289b07a481964759a814a75606bccae25e0383b2
-EBUILD sleuthkit-4.0.1.ebuild 1005 SHA256 086202bbac2e7e6a21f8ec386ce4509b23af829e083cda6e6478fc4f114f5df8 SHA512 54677e6db287fdf876544ebc68d07d9ab83bdb06abd0d655c71adb961b7b1577e16a62e36373e9e8d46b1b8c43cb3a4f62a1d42bebc2bb06c8c2e17c6b4023db WHIRLPOOL c67af29408f21928544c3068751404978773a34de8fea3dd12cd96d2add199e981b50604d9f7d1e6ef68413acf55cdc2513b5d71eea82d23923cddc482ccb771
-MISC ChangeLog 11527 SHA256 261b3b235c535fea36d925c2e03ecf1c960605a30881bac3a736e10efcd5c31f SHA512 370f68c631febfc8e42adef23aa86dad95e174080b96155583f813afbbad2a3deb0b688b5ba56f7ffcc06ad6a2d161dbf08a54040b16f0f55edd8a15b6cfb365 WHIRLPOOL bbe855abfe06c3686e5d6a5225dd758764c73303d42c177d2460c14dd31fee4d14f0ee009661941ec1a99abfc7744ffef06f829ccddd3b76ddf4007cbe586685
+EBUILD sleuthkit-4.0.1.ebuild 1004 SHA256 f718a67f77b29e2a723498fe0e7cd83f784eb2947c5ff5ff6f92f26cfd13c598 SHA512 15790d30a30803f47d264c63a9b9e24b65956556e076d5b3dea5936794986ab68dc5197adff9a583e7de5f5de46fd3d2603c93ba07b05fd7e4df72a81aaa5731 WHIRLPOOL efe6a8f79ef9126c62e5336bed222e7f6f3818f711f2ce3856eafb6b11874d3ea31c93c4dc6a943a5b0152c69f5ae7c290c0775be34b3c1be5ef55993efbca67
+MISC ChangeLog 11632 SHA256 5231a3fdfd47c82be56626234dbe240471d546d119a65145d1224ecb231eac08 SHA512 42fd9f92c716f131e10efce4577c12b28e2ac1c89513f28ab9552013d9ca03631d46cdd2f7df0a262fe68f7579ca2893d7066122eda9df1c3061b63d88bee278 WHIRLPOOL 2f26b4ed6f8f82d3300c1371977ddcc945625f2bc36bda20aa6136f012771c80177d915017787acde086eb7e2fed2409e586848f733ed75c84753aeb80641093
 MISC metadata.xml 274 SHA256 ae9a998403a0a710e265ddd4a6bf163170c572122d18edbf1c923318cd988dcb SHA512 5e0b555db6e39c59118ab09f4acbff7a8bec4dc5cbc7a02fefd5e328af3f86c64c1933ca26724f352c2506be8585ccdbe02b4572caa77fa400bc771329074e15 WHIRLPOOL 35f76d314f5e896926ec380e3f7cefa673fa75cc43e55df638619eff01d467b3b48b44c8d34a47105d68887da58dda22967a6d340376ba885d45ed68858502ff
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDleE0ACgkQVWmRsqeSphNuYACeMcB2Kg+K8AeK0Wa8v56aAHHk
+xYYAnRF3QTG19d/lUU/WsrRw0EbP/saT
+=j706
+-----END PGP SIGNATURE-----
