@@ -1,6 +1,9 @@
 # ChangeLog for app-forensics/sleuthkit
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/sleuthkit/ChangeLog,v 1.71 2013/01/03 10:55:29 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/sleuthkit/ChangeLog,v 1.72 2013/01/03 12:23:39 jer Exp $
+
+  03 Jan 2013; Jeroen Roovers <jer@gentoo.org> sleuthkit-4.0.1.ebuild:
+  Stable for HPPA (bug #449920).
 
   03 Jan 2013; Agostino Sarubbo <ago@gentoo.org> sleuthkit-4.0.1.ebuild:
   Stable for amd64, wrt bug #449920
