@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/freeze
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/freeze/ChangeLog,v 1.23 2013/01/03 10:55:42 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/freeze/ChangeLog,v 1.24 2013/01/03 12:23:40 jer Exp $
+
+  03 Jan 2013; Jeroen Roovers <jer@gentoo.org> freeze-2.5.0-r1.ebuild:
+  Stable for HPPA (bug #449920).
 
   03 Jan 2013; Agostino Sarubbo <ago@gentoo.org> freeze-2.5.0-r1.ebuild:
   Stable for amd64, wrt bug #449920
